# AgentHub

./: .gitignore  README.md  onboarding-snapshot.md  pyproject.toml
.playwright-mcp/: page-2026-05-10T00-41-02-736Z.yml
docs/superpowers/plans/: 2026-05-08-agenthub-complete-spec.md  2026-05-08-agenthub-mvp-implementation.md  2026-05-09-agenthub-a2a-implementation.md
docs/superpowers/skills/: agenthub-onboarding.md
docs/superpowers/specs/: 2026-05-08-agenthub-local-design.md  2026-05-09-agenthub-a2a-design.md
scripts/: agent_worker.py
src/agenthub/: __main__.py  a2a.py  cli.py  config.py  db.py  errors.py  models.py  profiles.py  registry.py  service.py  ui.py
src/agenthub/static/: app.css
src/agenthub/templates/: base.html  handoffs.html  health.html  index.html  onboarding.html
tests/: conftest.py  test_a2a.py  test_agents.py  test_cli_jsonl.py  test_compact.py  test_db.py  test_e2e_automation.py  test_e2e_workflow.py  test_load_smoke.py  test_registry.py  test_tasks_events_inbox.py  test_ui.py
